--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://postgres:<password>@@localhost:5432/<database_name>?schema=public"
+NEXTAUTH_SECRET="your_secret_token_@##ss"
